@@ -95,6 +95,7 @@ export(".name<-")
 export("labs<-")
 export(.mat2arr)
 export(.name)
+export(Apply)
 export(Cmat)
 export(ConjComp)
 export(Diff)
@@ -134,6 +135,7 @@ export(Xf)
 export(Xmat)
 export(abind)
 export(acond)
+export(add_faces)
 export(agg)
 export(anon)
 export(approx.Z)
@@ -262,6 +264,7 @@ export(tab)
 export(tab_)
 export(tab__)
 export(tab_df)
+export(tabf)
 export(tablemissing)
 export(tablemissing_)
 export(td)
